# Guitar

./: .gitignore  CMakeLists.txt  GuitarString.cxx  GuitarString.h  Helpers.cxx  Helpers.h  README.md  RingBuffer.cxx  RingBuffer.h  default.nix  main.cpp
